--- a/Project_1/css/contact_us.css
+++ b/Project_1/css/contact_us.css
@@ -4,8 +4,7 @@
   color: red;
   float: none;
   margin: auto;
-  text-align: right;
-  padding-right: 120px;
+  text-align: center;
   font-size: 20px;
   text-indent: 20px;
   font-family: Arial;
