Make Position header to fix

--- a/Project_1/css/style.css
+++ b/Project_1/css/style.css
@@ -1,6 +1,9 @@
 .Header {
   /* background-color: red; */
-  position: sticky;
+  position: fixed;
+  height: 30px;
+  width: 100%;
+  background: white;
   color: red;
   float: none;
   margin: auto;
