Fix Position Fixed at style.css

--- a/Project_1/css/style.css
+++ b/Project_1/css/style.css
@@ -7,10 +7,10 @@
   color: red;
   float: none;
   margin: auto;
-  text-align: right;
-  padding-right: 120px;
+  text-align: center;
+  padding-right: 200px;
   font-size: 20px;
-  text-indent: 20px;
+  text-indent: 100px;
   font-family: Arial;
 }
 
