--- a/Project_1/css/style.css
+++ b/Project_1/css/style.css
@@ -1,19 +1,22 @@
-.Header {
-  /* background-color: red; */
+.topnav a {
   position: fixed;
-  height: 30px;
-  width: 100%;
-  background: white;
-  color: red;
-  float: none;
-  margin: auto;
+  float: left;
+  color: black;
   text-align: center;
-  padding-right: 250px;
-  font-size: 20px;
-  text-indent: 100px;
-  font-family: Arial;
-  
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* .topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+} */
 
 a:link {
   color: black;
