--- a/Project_1/css/style.css
+++ b/Project_1/css/style.css
@@ -1,5 +1,4 @@
 .topnav a {
-  position: fixed;
   float: left;
   color: black;
   text-align: center;
@@ -9,8 +8,9 @@
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: black;
+  color: white;
+  text-decoration: none;
 }
 
 /* .topnav a.active {
