Fix footer style, hide contacy_us.html

--- a/Project_1/css/style.css
+++ b/Project_1/css/style.css
@@ -79,8 +79,13 @@
 }
 
 .footer {
-  background-color: #EEEEEE;
-  height: 25px
+  color: white;
+  left: 0;
+  bottom: 0;
+  padding-top: 7px;
+  width: 100%;
+  background-color: #000000;
+  height: 35px
 }
 
 .text_footer {
