--- a/Project_1/css/style.css
+++ b/Project_1/css/style.css
@@ -112,11 +112,20 @@
 .footer_contact {
   background-color: #303030;
   color: white
+
 }
 
 .footer_contact_text {
-color: white;
+  text-align: left;
+  padding-left: 120px;
 }
+
+.footer_follow_text {
+  text-align: right;
+  padding-right: 120px;
+  padding-top : 0;
+}
+
 
 .body_quotes {
   text-align: center;
