--- a/Project_1/css/style.css
+++ b/Project_1/css/style.css
@@ -2,7 +2,7 @@
 .topnav {
   background-color: white;
   overflow: hidden;
-  /* position: fixed; */
+  position: fixed;
   top: 0;
   width: 100%;
 }
