--- a/Project_1/css/style.css
+++ b/Project_1/css/style.css
@@ -20,14 +20,14 @@
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  /* background-color: #ddd; */
-  color: black;
+  background-color: #ddd;
+  color: white;
   text-decoration: none;
 }
 
 /* Add an active class to highlight the current page */
 /* .active {
-  background-color: #4CAF50;
+  background-color: #ddd;
   color: white;
 } */
 
